# Self-Sovereign-Identity

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.github/: dependabot.yml
.github/workflows/: ci-formatting.yml  ci-js-ts.yml  ci-python-lint.yml  ci-python.yml  ci-rust.yml  ci-rustfmt.yml  ci-solidity.yml  ci.yml
apps/api-gateway/: .env.example  .gitignore  Dockerfile  README.md  openapi.yaml  package.json  tsconfig.json
apps/api-gateway/src/: app.ts  index.ts
apps/api-gateway/src/lib/: envGate.ts  stellarClient.ts
apps/api-gateway/src/middleware/: auth.ts  errorHandler.ts  rateLimit.ts  requestId.ts  validate.ts
apps/api-gateway/src/routes/: bridge.ts  credentials.ts  health.ts  identity.ts  zkp.ts
apps/api-gateway/test/: requestId.test.ts
apps/frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src/components/: BridgeMonitor.tsx  ErrorBoundary.tsx  IdentityCard.tsx  Layout.tsx  Logo.tsx  ScrollToTop.tsx  WalletConnect.tsx  ZKProofModal.tsx
apps/frontend/src/components/ui/: Button.tsx  Card.tsx  Modal.tsx  Skeleton.tsx  Spinner.tsx  Toast.tsx
apps/frontend/src/hooks/: useBridge.ts  useCopyToClipboard.ts  useIdentity.ts  useWallet.ts
apps/frontend/src/lib/: api.ts  evm.ts  stellar.ts  wagmi.ts
apps/frontend/src/pages/: BridgeMonitor.tsx  CreateIdentity.tsx  Credentials.tsx  Dashboard.tsx
apps/frontend/src/styles/: globals.css
apps/service-ai-fraud/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/service-ai-fraud/src/: __init__.py  api.py  registry.py  store.py
apps/service-ai-fraud/src/features/: extract.py
apps/service-ai-fraud/src/models/: fraud_detector.py
apps/service-ai-fraud/src/tests/: test_api.py
apps/service-ai-fraud/tests/: conftest.py  test_api.py  test_extract.py  test_heuristic.py  test_pipeline.py  test_registry.py  test_store.py
apps/service-bridge-relayer/: .env.example  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
apps/service-bridge-relayer/src/: health.ts  index.ts  state.ts
apps/service-bridge-relayer/src/horizon/: client.ts
apps/service-bridge-relayer/src/listeners/: evm.ts  stellar.ts
apps/service-bridge-relayer/tests/: health.test.ts
apps/service-ipfs/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
apps/service-ipfs/src/: index.ts
apps/service-ipfs/src/services/: encrypt.ts  pin.ts
apps/service-ipfs/src/utils/: retry.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PHASE2_BACKLOG.md  ROADMAP.md  SETUP.md
docs/upstream-issue-drafts/: rs-soroban-sdk-arbitrary-regression.md  rs-stellar-xdr-arbitrary-regression.md
scripts/: bootstrap.sh  check-stellar-xdr-fix.sh  deploy-all.sh  dev.sh  install-circom.sh  setup-branch-protection.sh
