[project]
name = "ssi-service-ai-fraud"
version = "0.1.0"
description = "Self-Sovereign Identity — AI fraud detection microservice"
requires-python = ">=3.11"
authors = [{ name = "SSI contributors" }]
license = { text = "MIT" }

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Patterns are matched against file paths relative to the directory
# where ruff is invoked (the project root = the pyproject.toml directory).
# Tests: allow magic-value comparisons (standard in test assertions).
"tests/**" = ["PLR2004"]
"src/tests/**" = ["PLR2004"]
# api.py: lazy imports for optional sklearn deps (PLC0415) and
# HTTP status-code literals (PLR2004) are intentional.
"src/api.py" = ["PLC0415", "PLR2004"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# `pythonpath = ["."]` makes `src/` a normal Python package so the
# RELATIVE imports inside `src/api.py` (`from .models.fraud_detector …`)
# resolve as `src.<module>` rather than top-level `<module>`. Tests then
# import via the explicit package path: `from src.api import app`.
pythonpath = ["."]
